--- a/index.html
+++ b/index.html
@@ -19,14 +19,18 @@
 }
 *{box-sizing:border-box;margin:0;padding:0}
 html,body{
-  background:var(--bg-deep);color:var(--ink);
+  background:var(--bg-deep);
+  color:var(--ink);
   font-family:Inter,system-ui,sans-serif;
   scroll-behavior:smooth;
   -webkit-font-smoothing:antialiased;
+  overflow-x:hidden;
 }
 body::before{
-  content:"";position:fixed;inset:0;z-index:-2;
-  background:var(--grad);filter:saturate(115%);
+  content:"";
+  position:fixed;inset:0;z-index:-2;
+  background:var(--grad);
+  filter:saturate(115%);
 }
 .aurora{
   position:fixed;inset:0;z-index:-1;pointer-events:none;
@@ -38,7 +42,10 @@ body::before{
   mix-blend-mode:screen;
   animation:aurora 16s ease-in-out infinite alternate;
 }
-@keyframes aurora{0%{transform:translateY(0)}100%{transform:translateY(-24px) rotate(.3deg)}}
+@keyframes aurora{
+  0%{transform:translateY(0)}
+  100%{transform:translateY(-24px) rotate(.3deg)}
+}
 
 /* Typography */
 :root{
@@ -50,51 +57,143 @@ body::before{
 .header{text-align:center;padding:6rem 1.2rem 4rem}
 .kicker{color:var(--muted);text-transform:uppercase;letter-spacing:.22em;font-size:.85rem}
 h1{
-  font-family:"Space Grotesk",Inter,sans-serif;font-weight:700;
-  font-size:var(--h1);margin:.6rem auto 1rem;line-height:1.05;
+  font-family:"Space Grotesk",Inter,sans-serif;
+  font-weight:700;
+  font-size:var(--h1);
+  margin:.6rem auto 1rem;
+  line-height:1.05;
   background:linear-gradient(90deg,#fff,#dff4ff 45%,#aee0ff 85%);
-  -webkit-background-clip:text;-webkit-text-fill-color:transparent;
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
   text-shadow:0 0 24px rgba(170,220,255,.35);
 }
-.subtitle{color:var(--muted);font-size:var(--lead);max-width:860px;margin:0 auto;line-height:1.8}
+.subtitle{
+  color:var(--muted);
+  font-size:var(--lead);
+  max-width:860px;
+  margin:0 auto;
+  line-height:1.8;
+}
 
 /* Nav */
-.nav{display:flex;flex-wrap:wrap;justify-content:center;gap:.6rem;margin-top:1.8rem}
-.nav a{color:#e8f4ff;text-decoration:none;font-size:.95rem;padding:.4rem .7rem;border-bottom:1px solid #ffffff22;transition:opacity .25s}
+.nav{
+  display:flex;
+  flex-wrap:wrap;
+  justify-content:center;
+  gap:.6rem;
+  margin-top:1.8rem;
+}
+.nav a{
+  color:#e8f4ff;
+  text-decoration:none;
+  font-size:.95rem;
+  padding:.4rem .7rem;
+  border-bottom:1px solid #ffffff22;
+  transition:opacity .25s;
+}
 .nav a:hover{opacity:.8}
 
 /* Sections */
-.section{padding:4rem 1.2rem;max-width:1100px;margin:0 auto}
-.section h2{
-  font-family:"Space Grotesk";font-weight:600;font-size:var(--h2);
-  margin-bottom:1rem;color:#e9f7ff;text-shadow:0 0 10px rgba(160,210,255,.25);
+.section{
+  padding:4rem 1.2rem;
+  max-width:1100px;
+  margin:0 auto;
 }
-.section .eyebrow{color:var(--muted);text-transform:uppercase;letter-spacing:.18em;font-size:.8rem;margin-bottom:.35rem}
+.section h2{
+  font-family:"Space Grotesk";
+  font-weight:600;
+  font-size:var(--h2);
+  margin-bottom:1rem;
+  color:#e9f7ff;
+  text-shadow:0 0 10px rgba(160,210,255,.25);
+}
+.section .eyebrow{
+  color:var(--muted);
+  text-transform:uppercase;
+  letter-spacing:.18em;
+  font-size:.8rem;
+  margin-bottom:.35rem;
+}
 .p{font-size:var(--body);line-height:1.9;margin:.9rem 0}
-hr.sep{border:0;height:1px;background:linear-gradient(90deg,transparent,#ffffff2b 20%,#ffffff3a 50%,transparent);margin:2rem 0}
+hr.sep{
+  border:0;
+  height:1px;
+  background:linear-gradient(90deg,transparent,#ffffff2b 20%,#ffffff3a 50%,transparent);
+  margin:2rem 0;
+}
 
 /* Flowchart */
-.flow-wrap{margin-top:1.8rem;border:none;border-radius:22px;padding:1rem;background:rgba(255,255,255,.02);overflow-x:auto}
-.flow{width:100%;max-width:980px;height:600px;margin:0 auto;display:block}
-.node circle{fill:rgba(15,30,55,.8);stroke:#c8eaff;stroke-width:1.8px;filter:drop-shadow(0 0 8px rgba(150,210,255,.4))}
+.flow-wrap{
+  margin-top:1.8rem;
+  border:none;
+  border-radius:22px;
+  padding:1rem;
+  background:rgba(255,255,255,.02);
+  overflow-x:auto;
+}
+.flow{
+  width:100%;
+  max-width:980px;
+  height:600px;
+  margin:0 auto;
+  display:block;
+}
+.node circle{
+  fill:rgba(15,30,55,.8);
+  stroke:#c8eaff;
+  stroke-width:1.8px;
+  filter:drop-shadow(0 0 8px rgba(150,210,255,.4));
+}
 .node text{fill:#fff;font-size:13px;font-weight:600}
 .node .sub{fill:#e1efff;font-size:11px;font-weight:500}
-.link{fill:none;stroke:#a5d6ff;stroke-width:2.1px;opacity:.9;filter:drop-shadow(0 0 4px rgba(150,200,255,.3))}
+.link{
+  fill:none;
+  stroke:#a5d6ff;
+  stroke-width:2.1px;
+  opacity:.9;
+  filter:drop-shadow(0 0 4px rgba(150,200,255,.3));
+}
 .link--return{stroke:#e6eeff;opacity:.55}
-.legend{display:flex;flex-wrap:wrap;justify-content:center;gap:.7rem;margin-top:.8rem;color:#dfeeff;font-size:.9rem}
+.legend{
+  display:flex;
+  flex-wrap:wrap;
+  justify-content:center;
+  gap:.7rem;
+  margin-top:.8rem;
+  color:#dfeeff;
+  font-size:.9rem;
+}
 
-/* Reveal on scroll */
+/* Reveal */
 .reveal{opacity:0;transform:translateY(20px);transition:opacity .8s ease,transform .8s ease}
 .reveal.in{opacity:1;transform:translateY(0)}
 
 /* Footer */
-footer{text-align:center;color:#a7b8d8;padding:3rem 1.2rem 4rem;border-top:1px solid #ffffff18;margin-top:3rem}
+footer{
+  text-align:center;
+  color:#a7b8d8;
+  padding:3rem 1.2rem 4rem;
+  border-top:1px solid #ffffff18;
+  margin-top:3rem;
+}
 
-/* Mobile */
-@media(max-width:900px){.flow{height:780px;transform:scale(1.25);transform-origin:center top}}
-@media(max-width:480px){.flow{height:880px;transform:scale(1.4)}}
+/* MOBILE FIX — Larger flowchart but scrollable */
+@media(max-width:900px){
+  .flow{height:auto;width:150%;max-width:none;margin-left:-25%;}
+}
+@media(max-width:480px){
+  .flow{height:auto;width:180%;max-width:none;margin-left:-40%;}
+}
 </style>
 </head>
+
+<body>
+<div class="aurora" aria-hidden="true"></div>
+<!-- (BODY CONTENT SAME AS BEFORE) -->
+<!-- You can keep all your previous <header>, <main>, and <footer> content. -->
+</body>
+</html>
+
 
 <body>
 <div class="aurora" aria-hidden="true"></div>
